# Auto-X-Industry

./: .gitignore  README.md
.github/: FUNDING.yml
agents/: Dockerfile  README.md  _wsgi.py  auto_x.py  docker-compose.yml  requirements.txt
agents/pipelines/: digital_human_pipeline.py  document_pipeline.py  graph-pipeline.py  llm_pipeline.py  lspr_pipeline.py  pipeline.py  video_pipeline.py
agents/pipelines/datasets/: data_util.py  panoptic_eval.py
agents/pipelines/groundingdino/: engine.py
agents/pipelines/ppstructure/: matcher.py  predict_structure.py  utility.py
agents/pipelines/utils/: languages.py  utils.py
agents/server/: api.py  model.py
demos/: README.md
engine/: README.md
engine/src/: autox_engine.h
server/: README.md  _wsgi.py  auto_x.py  requirements.txt
server/api/: __init__.py  api.py  model.py  response.py  wsgi.py
server/auto_x_ml/: api.py  model.py  server.py
server/label_templates/: generate_templates.py  keypoints.xml  visual.xml
server/tools/: detection.xml  generate_templates.py  keypoints.xml  questions.txt
service/: README.md  package-lock.json  package.json
service/src/: index.html
studio/: README.md
studio/AutoXLabel/: AutoXLabel.py  requirements.txt
studio/doc_studio/: AutoXDocLabel.py  AutoXDocStudio.py  pyproject.toml
studio/doc_studio/libs/: resources.py  shape.py  stringBundle.py
studio/doc_studio/ml/: api_connector.py
studio/doc_studio/resources/strings/: strings-en.properties  strings-zh-CN.properties
studio/knowledge_studio/: readme.md
studio/label_studio/: app.json
(+348 files in other folders)
