[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoXDocLabel"
version = "2.1.4"
dependencies = [
  "pyqt5",
  "xlrd==2.0.1",
  "tqdm",
]
requires-python = ">= 3.9"
authors = [
  {name = "Auto-X", email = "autox@autox.com"}
]
description = "AutoXDocLabel is a semi-auomated document annotation tool supported by Auto-X Agents."
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["ocr", "textdetection", "textrecognition", "crnn", "east", "star-net", "rosetta", "ocrlite", "db"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
  "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/HairongWu/Auto-X-Industry"
Documentation = "https://github.com/HairongWu/Auto-X-Industry/blob/master/README.md"
Repository = "https://github.com/HairongWu/Auto-X-Industry.git"
Issues = "https://github.com/HairongWu/Auto-X-Industry/issues"

[project.gui-scripts]
AutoXDocLabel = "AutoXDocLabel.AutoXDocLabel:main"

[tool.setuptools]
package-dir = {AutoXDocLabel = ""}
package-data = {AutoXDocLabel = ["libs/*", "resources/strings/*", "resources/icons/*"]}
